// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleAnalyticsService should filter pages out 1`] = `
[
  {
    "include": {
      "published": {
        "select": {
          "slug": true,
        },
      },
    },
    "where": {
      "published": {
        "slug": {
          "in": [
            "barfoo",
            "bazfoo",
          ],
          "mode": "insensitive",
        },
      },
    },
  },
]
`;

exports[`GoogleAnalyticsService should get articles by popularity 1`] = `
[
  {
    "published": {
      "slug": "bazfoo",
    },
  },
  {
    "published": {
      "slug": "foobaz",
    },
  },
  {
    "published": {
      "slug": "barfoo",
    },
  },
  {
    "published": {
      "slug": "foobar",
    },
  },
]
`;

exports[`GoogleAnalyticsService should get articles by popularity 2`] = `
[
  {
    "include": {
      "published": {
        "select": {
          "slug": true,
        },
      },
    },
    "where": {
      "published": {
        "slug": {
          "in": [
            "foobar",
            "barfoo",
            "bazfoo",
            "foobaz",
          ],
          "mode": "insensitive",
        },
      },
    },
  },
]
`;

exports[`GoogleAnalyticsService should have a working pagination 1`] = `
[
  {
    "include": {
      "published": {
        "select": {
          "slug": true,
        },
      },
    },
    "where": {
      "published": {
        "slug": {
          "in": [
            "barfoo",
            "bazfoo",
          ],
          "mode": "insensitive",
        },
      },
    },
  },
]
`;
